# tfm

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
include/app/: app.hpp
include/core/: bookmarks.hpp  config.hpp  dir_entry.hpp  fs_ops.hpp
include/input/: keybinds.hpp
include/ui/: file_pane.hpp  icons.hpp  preview_pane.hpp  theme.hpp
src/: main.cpp
src/app/: app.cpp
src/core/: bookmarks.cpp  config.cpp  dir_entry.cpp  fs_ops.cpp
src/input/: keybinds.cpp
src/ui/: file_pane.cpp  icons.cpp  preview_pane.cpp  theme.cpp
